--- a/static/styles/help/help.scss
+++ b/static/styles/help/help.scss
@@ -1,6 +1,6 @@
 @import "../lib/colors";
 @import "./search";
-@import "./component-card";
+@import "./icon-card";
 @import "./icon-link-group";
 
 /********************************************************
