--- a/views/firstLogin/firstLoginExistingUser.hbs
+++ b/views/firstLogin/firstLoginExistingUser.hbs
@@ -13,7 +13,8 @@
       <div class="form-group">
           <fieldset>
               <input type="radio" id="reg-u14" name="student-age" value="u14"> <label for="reg-u14">unter 14 Jahre alt.</label><br/>
-              <input type="radio" id="reg-14" name="student-age" value="14"> <label for="reg-14">mindestens 14 Jahre alt.</label>
+              <input type="radio" id="reg-1417" name="student-age" value="1417"> <label for="reg-1417">zwischen 14 und 17 Jahre alt.</label><br>
+              <input type="radio" id="reg-18" name="student-age" value="18"> <label for="reg-18">mindestens 18 Jahre alt.</label>
           </fieldset>
       </div>
 
