--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -116,6 +116,7 @@
                                 </div>
                             </div>
                         </li>
+                        {{#if false}}
                         <li class="nav-item notification-dropdown" data-step="4" data-intro="Hier erhälst du Benachrichtigungen.">
                             <div class="dropdown minimal-button">
                                 <a class="btn btn-secondary btn-thin dropdown-toggle notification-dropdown-toggle {{#if
@@ -145,7 +146,7 @@
                                 </div>
                             </div>
                         </li>
-
+    	                {{/if}}
                         <li class="nav-item help-drodown" data-step="5" data-intro="Dies ist der Hilfebereich für deine Fragen und Probleme.">
                             <div class="dropdown minimal-button">
                                 <a class="btn btn-secondary btn-thin dropdown-toggle" title="Hilfe" data-toggle="dropdown">
