changing default permissions works now

--- a/views/teams/forms/form-file-permissions.hbs
+++ b/views/teams/forms/form-file-permissions.hbs
@@ -19,19 +19,19 @@
         <tr>
             <td>Externe Experten</td>
             <td>
-                <input class="box" type="checkbox" name="externalExperts" value="allowExternalExperts" checked="checked" />
+                <input class="box" type="checkbox" name="externalExperts" data-force-value value="allowExternalExperts" {{allowExternalExperts}} />
             </td>
         </tr>
         <tr>
             <td>Teilnehmer</td>
             <td>
-                <input class="box" type="checkbox" name="externalExperts" value="allowMembers" checked="checked" />
+                <input class="box" type="checkbox" name="teamMembers" data-force-value value="allowTeamMembers" {{allowTeamMembers}} />
             </td>
         </tr>
         <tr>
             <td>Leiter und Team-Admins</td>
             <td>
-                <input class="box" type="checkbox" data-force-value name="externalExperts" value="allowExternals" checked="checked" disabled />
+                <input class="box" type="checkbox" data-force-value name="other" value="allowOthers" checked="checked" disabled />
             </td>
         </tr>
     </table>
