--- a/views/help/icon-card.hbs
+++ b/views/help/icon-card.hbs
@@ -1,9 +1,9 @@
 <div class="icon-card {{class}}" id="{{id}}">
     <div class="icon-card__content">
         {{#if icon}}
-            <div class="icon-card__icon">
+            <a href="#{{id}}" class="icon-card__icon">
                 <i class="fa fa-fw {{icon}}" aria-hidden="true"></i>
-            </div>
+            </a>
         {{/if}}
         <h4 class="icon-card__title">{{title}}</h4>
         <div class="icon-card__body">
