--- a/static/styles/help/help.scss
+++ b/static/styles/help/help.scss
@@ -16,14 +16,14 @@ iframe.full {
  * FORM
  ********************************************************/
 // wrapper
-label.form-group{
+label.form-group {
   display: block;
   margin-bottom: 8px;
 }
 
 // Label
-.control-label{
-  &.optional::after{
+.control-label {
+  &.optional::after {
     content: " (optional)";
     font-weight: lighter;
   }
@@ -31,20 +31,21 @@ label.form-group{
 
 // Inputs
 .form-control,
-.chosen-container-single .chosen-single{
+.chosen-container-single .chosen-single {
   border: 1px solid #d9d9d9;
   border-radius: 0;
   text-align: left;
   font-weight: normal;
 
-  &:focus, &:active{
+  &:focus,
+  &:active {
     outline: none;
     border-color: $primaryColor;
   }
 }
 
 // chosen options
-.chosen-container .chosen-results li{
+.chosen-container .chosen-results li {
   text-align: left;
 }
 
@@ -53,13 +54,15 @@ fieldset.switch_wrapper {
   width: 100%;
   max-width: 400px;
   display: inline-block;
+
   .switch {
     display: flex;
     flex-wrap: nowrap;
 
     input[type="radio"] {
       display: none;
-      &:checked + label {
+
+      &:checked+label {
         color: $accentColor;
         background-color: #fff;
       }
@@ -82,6 +85,7 @@ fieldset.switch_wrapper {
       text-align: center;
 
       transition: color .3s, background-color .3s;
+
       &:first-of-type {
         border-left: 1px solid #fff;
       }
@@ -90,7 +94,7 @@ fieldset.switch_wrapper {
 }
 
 // (submit-) Button
-button{
+button {
   border: 1px solid #333;
   padding: 8px 16px;
   font-weight: bold;
@@ -98,7 +102,8 @@ button{
   background: transparent;
   margin-top: 16px;
   transition: color .3s ease-in-out, background-color .3s ease-in-out;
-  &:hover{
+
+  &:hover {
     outline: none;
     color: #fff;
     background-color: #333;
@@ -142,36 +147,42 @@ button{
 .collapse__section {
   .collapse__item {
 
-    &:not(:last-of-type){
+    &:not(:last-of-type) {
       border-bottom: 1px solid #333;
     }
 
     cursor: pointer;
+
     &:last-of-type {
       border-bottom: none;
     }
-    .collapse__title{
+
+    .collapse__title {
       text-align: left;
       padding: 12px 20px 12px 0;
       font-size: 1.2em;
-      h5{
+
+      h5 {
         display: inline;
         padding-left: 8px;
         font-size: inherit;
       }
-      &.single{
+
+      &.single {
         color: $primaryColor;
       }
     }
 
-    .collapse__content{
+    .collapse__content {
       text-align: left;
     }
   }
 }
 
 // link cards
-.first-steps-card, .quickHelp-card, .information-card {
+.first-steps-card,
+.quickHelp-card,
+.information-card {
   padding: 2rem 0 0 0;
 }
 
@@ -186,33 +197,41 @@ button{
   .icon-card__content {
     background-color: $accentColor;
     color: #fff;
+
     .icon-card__title:before {
       border-bottom-color: #fff;
     }
-    form{
+
+    form {
       margin-top: 1rem;
-      p{
+
+      p {
         text-align: left;
       }
-      .control-label{
+
+      .control-label {
         display: block;
         text-align: left;
         padding-right: 2rem;
         margin-bottom: 4px;
       }
-      .chosen-container{
+
+      .chosen-container {
         color: initial;
       }
-      button{
+
+      button {
         border-color: #fff;
         color: #fff;
-        &:hover{
+
+        &:hover {
           color: $accentColor;
           background-color: #fff;
         }
       }
     }
-    p{
+
+    p {
       margin-top: .75rem;
       margin-bottom: .25rem;
     }
@@ -223,14 +242,17 @@ button{
   .icon-card__content {
     color: #fff;
     background: #e25617;
+
     .icon-card__title:before {
       border-bottom-color: #fff;
     }
   }
-  a{
+
+  a {
     color: #fff;
     text-decoration: underline;
-    &:hover{
+
+    &:hover {
       color: $accentColor;
     }
   }
