--- a/static/styles/help/icon-link-group.scss
+++ b/static/styles/help/icon-link-group.scss
@@ -1,56 +1,58 @@
 @import "../lib/bootstrap/scss/bootstrap-flex";
 
 .link-wrapper {
-    height: 5rem;
+  height: 5rem;
 
-    a {
-        color: #333;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-decoration: none;
+  a {
+    color: #333;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
 
-        span {
-            transition: all .2s ease-in-out;
-            padding: 0 8px;
-        }
-
-        i {
-            display: block;
-            font-size: 1.8rem;
-        }
-
-        &:hover, &:focus{
-            outline: none;
-
-            span{
-                transform: scale(1.1);
-                text-shadow: 0px 2px 5px #3333;
-            }
-        }
+    span {
+      transition: all .2s ease-in-out;
+      padding: 0 8px;
     }
+
+    i {
+      display: block;
+      font-size: 1.8rem;
+    }
+
+    &:hover,
+    &:focus {
+      outline: none;
+
+      span {
+        transform: scale(1.1);
+        text-shadow: 0px 2px 5px #3333;
+      }
+    }
+  }
 }
 
 @include media-breakpoint-down(xs) {
-    .link-wrapper {
-        &:nth-of-type(4) {
-            border-bottom-right-radius: 4px;
-        } 
-
-        &:nth-of-type(3) {
-            border-bottom-left-radius: 4px;
-        }
+  .link-wrapper {
+    &:nth-of-type(4) {
+      border-bottom-right-radius: 4px;
     }
+
+    &:nth-of-type(3) {
+      border-bottom-left-radius: 4px;
+    }
+  }
 }
-@include media-breakpoint-up(sm) {
-    .link-wrapper {
-        &:nth-of-type(4) {
-            border-bottom-right-radius: 4px;
-        } 
 
-        &:nth-of-type(1) {
-            border-bottom-left-radius: 4px;
-        }
+@include media-breakpoint-up(sm) {
+  .link-wrapper {
+    &:nth-of-type(4) {
+      border-bottom-right-radius: 4px;
     }
+
+    &:nth-of-type(1) {
+      border-bottom-left-radius: 4px;
+    }
+  }
 }
