--- a/static/styles/help/icon-card.scss
+++ b/static/styles/help/icon-card.scss
@@ -4,10 +4,10 @@
 
   .icon-card__content {
     position: relative;
+    border: 1px solid $colorLightGrey;
     border-radius: 4px;
     padding: 16px;
     padding-top: 2rem;
-    border: 1px solid $colorLightGrey;
     text-align: center;
 
     .icon-card__icon {
@@ -16,11 +16,11 @@
       top: 0;
       left: 50%;
       transform: translate(-50%, -50%);
-      padding: 12px;
-      background: #333;
       border-radius: 8px;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24);
+      background: #333;
+      padding: 12px;
       color: #fff;
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
       font-size: 2em;
     }
 
@@ -31,12 +31,12 @@
     }
 
     .icon-card__title:before {
-      content: "";
       position: absolute;
-      width: 50%;
       bottom: 0;
       left: 25%;
       border-bottom: 1px solid #333;
+      width: 50%;
+      content: "";
     }
   }
 }
