--- a/static/styles/help/icon-link-group.scss
+++ b/static/styles/help/icon-link-group.scss
@@ -4,12 +4,12 @@
   height: 5rem;
 
   a {
-    color: #333;
-    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 100%;
     text-decoration: none;
+    color: #333;
 
     span {
       transition: all .2s ease-in-out;
@@ -27,7 +27,7 @@
 
       span {
         transform: scale(1.1);
-        text-shadow: 0px 2px 5px #3333;
+        text-shadow: 0 2px 5px rgba(51, 51, 51, .2);
       }
     }
   }
