--- a/static/styles/lib/editor.scss
+++ b/static/styles/lib/editor.scss
@@ -16,7 +16,7 @@
 }
 
 .cke_bottom {
-  border-top: zero;
+  border-top: 0;
   background-color: $primaryColor !important;
 
   a.cke_path_item {
@@ -77,7 +77,7 @@ a.cke_dialog_tab:focus {
 }
 
 .cke_dialog_footer {
-  border-top: zero;
+  border-top: 0;
   background-color: #fff !important;
 }
 
