--- a/static/styles/lib/sc-theme/sc-card.scss
+++ b/static/styles/lib/sc-theme/sc-card.scss
@@ -67,7 +67,7 @@
         transition: all .1s ease-in-out;
         opacity: .5;
         margin: 0;
-        border: zero;
+        border: 0;
         border-radius: 50%;
         background: none;
         padding: 0;
@@ -146,7 +146,7 @@
       display: inline-block;
       float: right;
       transition: all .1s ease-in-out;
-      border: zero;
+      border: 0;
       border-radius: 2px;
       padding: 0 8px;
       text-align: center;
