some small adjustments

--- a/views/registration/forms/einwilligungserklaerung.hbs
+++ b/views/registration/forms/einwilligungserklaerung.hbs
@@ -12,7 +12,7 @@
 
 <label>
     <input name="{{prefix}}thirdPartyConsent" type="checkbox" value="true" required/>
-    <span> Ich habe die <a href="https://schul-cloud-hpi.obs.eu-de.otc.t-systems.com:443/Dokumente/Einwilligung/3-Informationen-zu-Inhalte-Anbietern.pdf" target="_blank">Informationen zu Inhalte-Anbietern</a> gelesen und willige in die Weitergabe der Pseudonyme an Inhalte-Anbieter ein</span>
+    <span> Ich habe die <a href="https://schul-cloud-hpi.obs.eu-de.otc.t-systems.com:443/Dokumente/Einwilligung/3-Informationen-zu-Inhalte-Anbietern.pdf" target="_blank">Informationen zu Inhalte-Anbietern</a> gelesen und willige in die Weitergabe der Pseudonyme an Inhalte-Anbieter ein.</span>
 </label>
 <p class="explanation">Nutzernamen werden nicht an integrierte Drittanbieter weitergegeben. Sollte eine Wiedererkennung nötig sein, z.B. für individuelle Aufgabenstellungen, geschieht dies zum Schutz der Nutzeridentität auf Basis eines Pseudonyms. Die Nutzerdaten bleiben sicher im Kernbereich der {{@root.theme.short_title}}.</p>
 
