--- a/views/teams/forms/form-invite-external-member.hbs
+++ b/views/teams/forms/form-invite-external-member.hbs
@@ -22,8 +22,8 @@
     <div class="form-group mt-3" data-role="teacher">
         <h3>Lehrer anderer Schulen einladen</h3>
         <p>
-            Wähle eine Lehrkraft anderer Schulen aus einem zentralen Verzeichnis aus oder gib die Adresse an, mit
-            der sie in der short_title registriert ist. Nach Beitritt zu deinem Team kann sie Schüler und 
+            Wähle eine Lehrkraft anderer Schulen aus einem zentralen Verzeichnis aus oder gib die E-Mail-Adresse an, mit
+            der sie registriert ist. Nach Beitritt zu deinem Team kann sie Schüler und
             Lehrer ihrer Schule zum Team hinzufügen.
         </p>
 
