--- a/views/files/forms/form-share-file.hbs
+++ b/views/files/forms/form-share-file.hbs
@@ -21,33 +21,25 @@
         <table class="file-permissions">
             <tr>
                 <th>Rolle</th>
-                <th>Lesen</th>
-                <th>Schreiben</th>
-                <th>Löschen</th>
+                <th>Zugriffsrechte</th>
             </tr>
             <tr>
-                <td>Mitglieder</td>
-                <td><input name="read" type="checkbox"></td>
-                <td><input name="write" type="checkbox"></td>
-                <td><input name="delete" type="checkbox"></td>
+                <td>Externe Experten</td>
+                <td>
+                    <input class="box" type="checkbox" name="externalExperts" value="allowExternalExperts" />
+                </td>
             </tr>
             <tr>
-                <td>Externer Experte</td>
-                <td><input name="read" type="checkbox"></td>
-                <td><input name="write" type="checkbox"></td>
-                <td><input name="delete" type="checkbox"></td>
+                <td>Teilnehmer</td>
+                <td>
+                    <input class="box" type="checkbox" name="teamMembers" value="allowTeamMembers" />
+                </td>
             </tr>
             <tr>
-                <td>Team-Leiter</td>
-                <td><input name="read" type="checkbox" data-force-value="true" checked></td>
-                <td><input name="write" type="checkbox" data-force-value="true" checked></td>
-                <td><input name="delete" type="checkbox" data-force-value="true" checked></td>
-            </tr>
-            <tr>
-                <td>Team-Admins</td>
-                <td><input name="read" type="checkbox" data-force-value="true" checked></td>
-                <td><input name="write" type="checkbox" data-force-value="true" checked></td>
-                <td><input name="delete" type="checkbox" data-force-value="true" checked></td>
+                <td>Leiter und Team-Admins</td>
+                <td>
+                    <input class="box" type="checkbox" data-force-value name="other" value="allowOthers" checked="checked" disabled />
+                </td>
             </tr>
         </table>
     </div>
