--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -21,7 +21,6 @@
           <h4 id="page-title" class="course-headline">{{{stripOnlyScript ../name}}}</h4>
           <i class="fa fa-cog"></i>
         </a>
-        </a>
         <div class="dropdown-menu dropdown-menu-right dropdown-menu-course">
           <a href="/courses/{{../_id}}/edit" class="dropdown-item btn-course-edit">
             <i class="fa fa-edit" aria-hidden="true"></i> Kurs bearbeiten
@@ -40,7 +39,9 @@
     {{/userHasPermission}}
     <div class="row description">
       <div class="col-sm-12">
+        {{#if description}}
         <p class="lead">Kursbeschreibung: {{{stripOnlyScript description}}}</p>
+        {{/if}}
         {{#if nextEvent}}
           <p class="text-muted">Nächste Unterrichtsstunde: {{nextEvent}}</p>
         {{/if}}
@@ -51,16 +52,16 @@
         <div class="tabContainer">
           <div class="tabs" data-max-width="1024">
             <span class="tab" data-tab="a">
-              <span class="text">Themen</span>
+              <span class="text count-badge" data-badge="{{lessons.length}}">Themen</span>
             </span>
             <span class="tab" data-tab="b">
-              <span class="text">Aufgaben</span>
+              <span class="text count-badge" data-badge="{{ add (arrayLength ../myhomeworks)  (arrayLength ../homeworks) }}">Aufgaben</span>
             </span>
             <span class="tab" data-tab="c">
-              <span class="text">Tools</span>
+              <span class="text count-badge" data-badge="{{ltiToolIds.length}}">Tools</span>
             </span>
             <span class="tab" data-tab="d">
-              <span class="text">Gruppen</span>
+              <span class="text count-badge" data-badge="{{courseGroups.length}}">Gruppen</span>
             </span>
           </div>
         </div>
